--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "axios": "^1.9.0",
+    "crc": "^4.3.2",
+    "google-protobuf": "^3.21.4",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "ts-protoc-gen": "^0.15.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
