--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "axios": "^1.9.0",
     "crc": "^4.3.2",
     "google-protobuf": "^3.21.4",
+    "i18next": "^25.2.1",
     "isbot": "^5.1.27",
+    "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
     "react-router": "^7.5.3",
     "ts-protoc-gen": "^0.15.0"
   },
